5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4377/executions/1692_1100.log
== TEST (2019-04-25 18:10:59) 
-- CODE:
va=int(input("cedula"))

if(va==2): 
	p="Tartaruga"
elif(va==5):
	p="Garça"
elif(va==10):
	p="Arara"
elif(va==20):
	p="Mico-leao-dourado"
elif(va==50):
	p="Onça-pintada"
elif(va==100):
	p="Garoupa"
else:
	print("Entrada:", va)
	print("Animal:Invalido")
print("Entrada:", va)	
print("Animal:", p)
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 18:11:05) 
-- CODE:
va=int(input("cedula"))

if(va==2): 
	p="Tartaruga"
elif(va==5):
	p="Garça"
elif(va==10):
	p="Arara"
elif(va==20):
	p="Mico-leao-dourado"
elif(va==50):
	p="Onça-pintada"
elif(va==100):
	p="Garoupa"
else:
	print("Entrada:", va)
	print("Animal:Invalido")
print("Entrada:", va)	
print("Animal:", p)
-- EXECUTION TIME:
0.140162
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal:Invalido
Entrada: 7
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal:
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 18:11:08) 
-- CODE:
va=int(input("cedula"))

if(va==2): 
	p="Tartaruga"
elif(va==5):
	p="Garça"
elif(va==10):
	p="Arara"
elif(va==20):
	p="Mico-leao-dourado"
elif(va==50):
	p="Onça-pintada"
elif(va==100):
	p="Garoupa"
else:
	print("Entrada:", va)
	print("Animal:Invalido")
print("Entrada:", va)	
print("Animal:", p)
-- EXECUTION TIME:
0.141045
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 7
Animal:Invalido
Entrada: 7
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 18:11:09) 
-- CODE:
va=int(input("cedula"))

if(va==2): 
	p="Tartaruga"
elif(va==5):
	p="Garça"
elif(va==10):
	p="Arara"
elif(va==20):
	p="Mico-leao-dourado"
elif(va==50):
	p="Onça-pintada"
elif(va==100):
	p="Garoupa"
else:
	print("Entrada:", va)
	print("Animal:Invalido")
print("Entrada:", va)	
print("Animal:", p)
-- EXECUTION TIME:
0.175007
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1692/1100/main.py", line 19, in <module>
    print("Animal:", p)
NameError: name 'p' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 18:11:09) 
-- CODE:
va=int(input("cedula"))

if(va==2): 
	p="Tartaruga"
elif(va==5):
	p="Garça"
elif(va==10):
	p="Arara"
elif(va==20):
	p="Mico-leao-dourado"
elif(va==50):
	p="Onça-pintada"
elif(va==100):
	p="Garoupa"
else:
	print("Entrada:", va)
	print("Animal:Invalido")
print("Entrada:", va)	
print("Animal:", p)
-- EXECUTION TIME:
0.193658
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1692/1100/main.py", line 19, in <module>
    print("Animal:", p)
NameError: name 'p' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 18:11:09) 
-- CODE:
va=int(input("cedula"))

if(va==2): 
	p="Tartaruga"
elif(va==5):
	p="Garça"
elif(va==10):
	p="Arara"
elif(va==20):
	p="Mico-leao-dourado"
elif(va==50):
	p="Onça-pintada"
elif(va==100):
	p="Garoupa"
else:
	print("Entrada:", va)
	print("Animal:Invalido")
print("Entrada:", va)	
print("Animal:", p)
-- EXECUTION TIME:
0.333602
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 18:11:09) 
-- CODE:
va=int(input("cedula"))

if(va==2): 
	p="Tartaruga"
elif(va==5):
	p="Garça"
elif(va==10):
	p="Arara"
elif(va==20):
	p="Mico-leao-dourado"
elif(va==50):
	p="Onça-pintada"
elif(va==100):
	p="Garoupa"
else:
	print("Entrada:", va)
	print("Animal:Invalido")
print("Entrada:", va)	
print("Animal:", p)
-- EXECUTION TIME:
0.487182
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:

-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 7
Animal:Invalido
Entrada: 7
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 18:11:10) 
-- CODE:
va=int(input("cedula"))

if(va==2): 
	p="Tartaruga"
elif(va==5):
	p="Garça"
elif(va==10):
	p="Arara"
elif(va==20):
	p="Mico-leao-dourado"
elif(va==50):
	p="Onça-pintada"
elif(va==100):
	p="Garoupa"
else:
	print("Entrada:", va)
	print("Animal:Invalido")
print("Entrada:", va)	
print("Animal:", p)
-- EXECUTION TIME:
0.521224
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1692/1100/main.py", line 19, in <module>
    print("Animal:", p)
UnicodeEncodeError: 'ascii' codec can't encode character '\xe7' in position 2: ordinal not in range(128)

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 18:11:10) 
-- CODE:
va=int(input("cedula"))

if(va==2): 
	p="Tartaruga"
elif(va==5):
	p="Garça"
elif(va==10):
	p="Arara"
elif(va==20):
	p="Mico-leao-dourado"
elif(va==50):
	p="Onça-pintada"
elif(va==100):
	p="Garoupa"
else:
	print("Entrada:", va)
	print("Animal:Invalido")
print("Entrada:", va)	
print("Animal:", p)
-- EXECUTION TIME:
0.377934
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1692/1100/main.py", line 19, in <module>
    print("Animal:", p)
UnicodeEncodeError: 'ascii' codec can't encode character '\xe7' in position 2: ordinal not in range(128)

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 18:11:10) 
-- CODE:
va=int(input("cedula"))

if(va==2): 
	p="Tartaruga"
elif(va==5):
	p="Garça"
elif(va==10):
	p="Arara"
elif(va==20):
	p="Mico-leao-dourado"
elif(va==50):
	p="Onça-pintada"
elif(va==100):
	p="Garoupa"
else:
	print("Entrada:", va)
	print("Animal:Invalido")
print("Entrada:", va)	
print("Animal:", p)
-- EXECUTION TIME:
0.282372
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1692/1100/main.py", line 19, in <module>
    print("Animal:", p)
NameError: name 'p' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 18:11:34) 
-- CODE:
va=int(input("cedula"))

if(va==2): 
	p="Tartaruga"
elif(va==5):
	p="Garça"
elif(va==10):
	p="Arara"
elif(va==20):
	p="Mico-leao-dourado"
elif(va==50):
	p="Onça-pintada"
elif(va==100):
	p="Garoupa"
else:
	print("Entrada:", va)
	print("Animal:Invalido")
print("Entrada:", va)	
print("Animal:", p)
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 18:12:29) 
-- CODE:
va=int(input("cedula"))

if(va==2): 
	p="Tartaruga"
elif(va==5):
	p="Garça"
elif(va==10):
	p="Arara"
elif(va==20):
	p="Mico-leao-dourado"
elif(va==50):
	p="Onça-pintada"
elif(va==100):
	p="Garoupa"
else:
	print("Entrada:", va)
	print("Animal:Invalido")

print("Entrada:", va)	
print("Animal:", p)
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 18:19:02) 
-- CODE:
va=int(input("cedula"))

if(va==2): 
	p="Tartaruga"
elif(va==5):
	p="Garça"
elif(va==10):
	p="Arara"
elif(va==20):
	p="Mico-leao-dourado"
elif(va==50):
	p="Onça-pintada"
elif(va==100):
	p="Garoupa"
else:
	print("Entrada:", va)
	print("Animal:Invalido")
h=p
print("Entrada:", va)	
print("Animal:", h)
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 18:19:57) 
-- CODE:
va=int(input("cedula"))

if(va==2): 
	p="Tartaruga"
elif(va==5):
	p="Garça"
elif(va==10):
	p="Arara"
elif(va==20):
	p="Mico-leao-dourado"
elif(va==50):
	p="Onça-pintada"
elif(va==100):
	p="Garoupa"
else:
	print("Entrada:", va)
	print("Animal:Invalido")
h=p
print("Entrada:", va)	
print("Animal:", h)
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 18:22:14) 
-- CODE:
va=int(input("cedula"))

if(va==2): 
	p="Tartaruga"
elif(va==5):
	p="Garça"
elif(va==10):
	p="Arara"
elif(va==20):
	p="Mico-leao-dourado"
elif(va==50):
	p="Onça-pintada"
elif(va==100):
	p="Garoupa"
else:
	p="Invalido"
	print("Entrada:", va)
	print("Animal:", p)

print("Entrada:", va)	
print("Animal:", p)
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 18:23:45) 
-- CODE:
va=int(input("cedula"))

if(va==2): 
	p="Tartaruga"
elif(va==5):
	p="Garça"
elif(va==10):
	p="Arara"
elif(va==20):
	p="Mico-leao-dourado"
elif(va==50):
	p="Onça-pintada"
elif(va==100):
	p="Garoupa"
else:
	p="Invalido"


print("Entrada:", va)	
print("Animal:", p)
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 18:23:50) 
-- CODE:
va=int(input("cedula"))

if(va==2): 
	p="Tartaruga"
elif(va==5):
	p="Garça"
elif(va==10):
	p="Arara"
elif(va==20):
	p="Mico-leao-dourado"
elif(va==50):
	p="Onça-pintada"
elif(va==100):
	p="Garoupa"
else:
	p="Invalido"


print("Entrada:", va)	
print("Animal:", p)
-- EXECUTION TIME:
0.145373
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal:
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 18:24:43) 
-- CODE:
va=int(input("cedula"))

if(va==2): 
	p="Tartaruga"
elif(va==5):
	p="Garça"
elif(va==10):
	p="Arara"
elif(va==20):
	p="Mico-leao-dourado"
elif(va==50):
	p="Onça-pintada"
elif(va==100):
	p="Garoupa"
else:
	p="Invalido"


print("Entrada:", va)	
print("Animal:", p)
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 18:24:47) 
-- CODE:
va=int(input("cedula"))

if(va==2): 
	p="Tartaruga"
elif(va==5):
	p="Garça"
elif(va==10):
	p="Arara"
elif(va==20):
	p="Mico-leao-dourado"
elif(va==50):
	p="Onça-pintada"
elif(va==100):
	p="Garoupa"
else:
	p="Invalido"


print("Entrada:", va)	
print("Animal:", p)
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 18:25:29) 
-- CODE:
va=int(input("cedula"))

if(va==2): 
	p="Tartaruga"
elif(va==5):
	p="Garca"
elif(va==10):
	p="Arara"
elif(va==20):
	p="Mico-leao-dourado"
elif(va==50):
	p="Onca-pintada"
elif(va==100):
	p="Garoupa"
else:
	p="Invalido"


print("Entrada:", va)	
print("Animal:", p)
-- EXECUTION TIME:
0.13891
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
